--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -428,6 +428,9 @@ Moja kati ya majukwaa ambayo unaweza ukaanzisha na kuendleza usaninidi kwa harak
 nayo ina ingiliania vizuri sana na bomba la unedelezaji la github ni moja kati ya majukwaa ya uwendelezaji
 wa application ambayo kama developer huna sababu yakuto tumia. 
 
+Baada ya kujisajili na kuingi codesandbox ukiwa kwenye dashbord utabofya hapo palipoandikwa **Import repository**,
+hakikisha unafahamu **url** ya tawi la hazina ambayo iko github ambayo unataka kuagiza codesandbox, nitatumia tawi la
+`dev` na kusukuma `main` bithaa yangu ya mwisho.  
 
 <iframe src="https://codesandbox.io/p/github/devhabari101/react-hatuwa-ya-kwanza-dom/dev" width="600" height="400"></iframe>
 
