--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -512,6 +512,7 @@ root.render(
 );
 ```
 
+Chanzo cha code [https://github.com/devhabari101/react-hatuwa-ya-kwanza-dom/tree/dev1][chanzo cha code]
 
 Kama tulivyo ona hapo awali **kazi ya kipengele** "Functional Component" ni kazi ya **kipengele cha react** "React Component"
 ambayo **inarudisha JSX**, moja kati yautata uliyoko hasa kama ni mgeni na umetoka 
