--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -719,6 +719,7 @@ export default function List() {
 
 ```
 
+**data.j**
 
 ```data.js
 export const planets = [
@@ -774,7 +775,14 @@ export function getImageUrl(mfumowajuwa) {
 }
 ```
 
-###State Componets 
+
+
+<iframe src="https://codesandbox.io/p/github/devhabari101/react-hatuwa-ya-kwanza-dom/dev2" width="600" height="400"></iframe>
+
+
+
+
+### State Componets 
 
 **Hali:kumbukumbu kwenye kipengele**
 
