--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -777,9 +777,9 @@ export function getImageUrl(mfumowajuwa) {
 
 
 
-<iframe src="https://codesandbox.io/p/github/devhabari101/react-hatuwa-ya-kwanza-dom/dev2" width="600" height="400"></iframe>
+<iframe src="https://73685d-3000.csb.app/" width="600" height="400"></iframe>
 
-
+<embed src="http://www.example.com" style="width:500px; height: 300px;">
 
 
 ### State Componets 
