--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -779,7 +779,7 @@ export function getImageUrl(mfumowajuwa) {
 
 <iframe src="https://73685d-3000.csb.app/" width="600" height="400"></iframe>
 
-<embed src="https://73685d-3000.csb.app/" width:600px; height: 400px;"></embed>
+<embed src="https://73685d-3000.csb.app/" "width:600px; height: 400px;"></embed>
 
 
 ### State Componets 
