--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -422,7 +422,7 @@ Baada ya kujisajili na kuingi codesandbox ukiwa kwenye dashbord utabofya hapo pa
 hakikisha unafahamu **url** ya tawi la hazina ambayo iko github ambayo unataka kuagiza codesandbox, nitatumia tawi la
 `dev` na kusukuma `main` bithaa yangu ya mwisho.  
 
-<iframe src="https://codesandbox.io/p/devbox/naughty-kate-hljjps" width="600" height="400"></iframe>
+<iframe src="https://codesandbox.io/p/github/devhabari101/react-hatuwa-ya-kwanza-dom/main" width="600" height="400"></iframe>
 
 
 
@@ -784,7 +784,7 @@ Unaweza ukasubutu kutengeneza album ya picha
 na pale utakapo bofya kitufe cha `nyingine` unategemea
 picha ibadilike kwa sababu react inasadia kwenye mwingiliano
 
-
+<iframe src="https://codesandbox.io/embed/jolly-hugle-fglnmx" width="600" height="400"></iframe>
 
 **data.js**
 
@@ -909,10 +909,11 @@ export default function List() {
 
 
 
-*lakini niyaje?*
 
 
-<iframe src="https://codesandbox.io/embed/jolly-hugle-fglnmx" width="600" height="400"></iframe>
+
+**lakini niyaje?**
+
 
 
 **Data zibaki kipengele kinapotolewa tena**
@@ -977,7 +978,7 @@ Kwa mabadiliko hayo kubofya kitufe `Nyingine` kunatakiwa kuonyeshe picha nyingin
 <iframe src="https://codesandbox.io/embed/musing-darkness-kmr7z3" width="600" height="400"></iframe>
 
 
-kujibu swali ni aje, nikama hivi....
+**kujibu swali ni aje, nikama hivi....**
 
 **Kipengele kita tolewa kwa mara ya kwanza:** kwa vile umeweka 0 kwenye `useState` 
 kama thamani ya awali kwenye `index` itarudisha `[0 setIndex]`. React ina kumbuka 0
@@ -1040,18 +1041,19 @@ export default function List() {
 
 Kwenye sandbox hii nimeongeza kitufe chakurudi Nyuma
 
+<iframe src="https://codesandbox.io/p/devbox/quirky-forest-88y33j" width="600" height="400"></iframe>
 
 Mpaka hapa tulipo fikia umeona mbinu za kisasa tunazotumia
 kwenye kuandika na kuendeleza application mawinguni mchakato 
-mzima wa bomba la undelaziji CD/CI github na vercel. 
+mzima wa bomba la undelaziji CI/CD github na vercel. 
 
-Tumeitafuna react kuanzia kwenye Dom mpaka kwenye ndoana za hali kwenye kipengele,
-Tumetoa vipengele kwa masharti na kwa orotha.  Mzoezi ndiyo yatakayo
+Tumeitafuna react kuanzia kwenye Dom mpaka kwenye kipengele na ndoana za hali,
+Tumetoa vipengele kwa masharti, orotha na hali.  Mzoezi ndiyo yatakayo
 kufanya bora endelea ku react, *code mnono*
 
 
 
-<iframe src="https://codesandbox.io/p/devbox/quirky-forest-88y33j" width="600" height="400"></iframe>
+
 
 
 
