--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -422,7 +422,7 @@ Baada ya kujisajili na kuingi codesandbox ukiwa kwenye dashbord utabofya hapo pa
 hakikisha unafahamu **url** ya tawi la hazina ambayo iko github ambayo unataka kuagiza codesandbox, nitatumia tawi la
 `dev` na kusukuma `main` bithaa yangu ya mwisho.  
 
-<iframe src="https://codesandbox.io/p/github/devhabari101/react-hatuwa-ya-kwanza-dom/main" width="600" height="400"></iframe>
+<iframe src="https://codesandbox.io/p/github/devhabari101/react-hatuwa-ya-kwanza-dom/main?embed" width="600" height="400"></iframe>
 
 
 
