--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -422,6 +422,8 @@ Baada ya kujisajili na kuingi codesandbox ukiwa kwenye dashbord utabofya hapo pa
 hakikisha unafahamu **url** ya tawi la hazina ambayo iko github ambayo unataka kuagiza codesandbox, nitatumia tawi la
 `dev` na kusukuma `main` bithaa yangu ya mwisho.  
 
+### Jaribio
+
 <iframe src="https://codesandbox.io/p/github/devhabari101/react-hatuwa-ya-kwanza-dom/main?embed" width="600" height="400"></iframe>
 
 
