--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -422,7 +422,7 @@ Baada ya kujisajili na kuingi codesandbox ukiwa kwenye dashbord utabofya hapo pa
 hakikisha unafahamu **url** ya tawi la hazina ambayo iko github ambayo unataka kuagiza codesandbox, nitatumia tawi la
 `dev` na kusukuma `main` bithaa yangu ya mwisho.  
 
-### Jaribio
+
 
 <iframe src="https://codesandbox.io/p/github/devhabari101/react-hatuwa-ya-kwanza-dom/main?embed" width="600" height="400"></iframe>
 
@@ -508,7 +508,9 @@ root.render(
 );
 ```
 
-Chanzo cha code [https://github.com/devhabari101/react-hatuwa-ya-kwanza-dom/tree/dev1][chanzo cha code]
+<iframe src="https://codesandbox.io/p/github/devhabari101/react-hatuwa-ya-kwanza-dom/dev1?embed" width="600" height="400"></iframe>
+
+
 
 Kama tulivyo ona hapo awali **kazi ya kipengele** "Functional Component" ni kazi ya **kipengele cha react** "React Component"
 ambayo **inarudisha JSX**, moja kati yautata uliyoko hasa kama ni mgeni na umetoka 
