--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -508,7 +508,12 @@ root.render(
 );
 ```
 
+### Jaribio
+
 <iframe src="https://codesandbox.io/p/github/devhabari101/react-hatuwa-ya-kwanza-dom/dev1?embed" width="600" height="400"></iframe>
+
+
+
 
 
 
