--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -156,30 +156,7 @@ kama huna jisajili alafu uingie github, na kufanya ifuatavyo,
 
 
 
-Kabla yakuendelea ningependa ufahamuu kwamba mpangilio wa mafaili nitakao tumia ni **flat** "bapa" kwa sababu application ninayo tengeneza ni ndogo, mtindo huu ni mwepesi kueleweka kwa mtu ambaye ana azaa kitu ambacho makala haya yanalenga. Zaidi yahapo ukisha fahamu mpangilio huu nirahisi kupanga vyovyote utakavyo kama unataka uweke kwenye mpangilio kwama **json** nikimanisha **fractal** uwamuzi niwako. 
-
-Nitatumia **PascalCasing** kuvipa majina vifaa vyangu na **CamelCasing** nitatumia kwenye majina ya directors/folders.  
-
->>Kwa juu juu tutakua na kitu kama hiki kumbuka huu hapa nimfano tu, siyo mpangilio uliyo kamilika kwa mpangilio uliyo kamilika nenda kwenye hathina yetu ya  github. 
-
-```
-public 
-|- index.html
-src
-|- index.js
-|- App.js
-|- components 
-   |- styles
-      |-Global.js
-      |-Header.styled.js
-   |- Header.js
-   |- Content.js
-   |- Footer.js
-README.MD
-package.json
-```
-
-Umepata taswira! Tusonge mbele tengeneza faili na kuliita `package.json`  faili hili maranyingi lina kaa kwenye mzizi wa application yako, ili kulitengeneza hili faili github utafanya hivi
+Tusonge mbele tengeneza faili na kuliita `package.json`  faili hili maranyingi lina kaa kwenye mzizi wa application yako, ili kulitengeneza hili faili github utafanya hivi
 
 
 ![img](https://i.ibb.co/KjyJ224/github-create-fileedit11.jpg)
