--- a/content/python/django-model-ya-mtumiaji/post.mdx
+++ b/content/python/django-model-ya-mtumiaji/post.mdx
@@ -14,7 +14,7 @@ kwenye Django nje ya boksi mtumiaji hua anatambuliwa kwa kutumia **jina la mtumi
 
 Makala haya yana elezea hatua kwa hatua jinsi ambavyo unaweza kutengeneza model yako ya Watumiaji kwenye Django ili **barua pepe** iweze kutumika kama chaguo la msingi la **utambulishaji** na **uthibitishwaji** wa mtumiaji badala ya **jina la mtumiaji**.
 
-Jambo lakuzingatia nikwamba hatua ambazo nitazionyesha kwenye makala haya zinahitaji mabadiliko makubwa kwenye **schema** za **hifadhi data**. Kwa mantiki hiyo inashauriwa kufanyika kwenye project mpya. Kama una project ambayo iko kazini na ungependa ufanye mabadiliko, itakubidi uchukue backup ya data zako na utengeneze upya **hifathi data**.
+Jambo lakuzingatia nikwamba hatua ambazo nitazionyesha kwenye makala haya zinahitaji mabadiliko makubwa kwenye **schema** za **hifadhi data**. Kwa mantiki hiyo inashauriwa kufanyika kwenye project mpya. Kama una project ambayo iko kazini na ungependa ufanye mabadiliko, itakubidi uchukue backup ya data zako na utengeneze upya **hifadhi data**.
 
 ## Malengo
 Mwisho wa makala haya utakuwa na uwezo waku:
@@ -36,7 +36,7 @@ Kama utahitaji kutumia **barua pepe**, utahitaji kutengeneza Model yako ya mtumi
 
 **Chaguzi:**
 
-*AbstractUser*: Tumia uchaguzi huu kama umerithika na **fields** ambazo tayari zipo kwenye modle ya mtumiaji na unahitaji kuondoa field ya **jina la mtumiaji**.
+*AbstractUser*: Tumia uchaguzi huu kama umeridhika na **fields** ambazo tayari zipo kwenye modle ya mtumiaji na unahitaji kuondoa field ya **jina la mtumiaji**.
 
 *AbstractBaseUser*: Tumia uchaguzi huu kama unataka kutengeneza modle yako ya mtumiaji kutokea mwazo, hii itakua ni modle mpya kabisa yakwako  kuazia mwazo.
 
