--- a/content/ripple-ni-nini/post.mdx
+++ b/content/ripple-ni-nini/post.mdx
@@ -20,7 +20,7 @@ popular: false
 
 
   
-### Je mtandao wa **Ripple** unaweza kuwa na ushindani mkubwa thidi ya **SWIFT**? 
+### Je mtandao wa **Ripple** unaweza kuwa na ushindani mkubwa dhidi ya **SWIFT**? 
 
 
 Huku **SWIFT** ikichukua saa (au hata siku) kufuta muamala, 
