--- a/content/ethereum-ni-nini/post.mdx
+++ b/content/ethereum-ni-nini/post.mdx
@@ -53,7 +53,7 @@ Ethereum ni jukwaa la software lililo gatuliwa liki pewa nguvu na teknologia ya 
 
 Ethereum ina weza kutumiwa na mtu yoyote yule kutengeneza teknologia ya kidigitali yoyote ile iliyo salama. Ina mfumo wa token ambao hutumika kulipia kazi iliyofanyika kuunga mkono blockchain, lakini washiriki wanaweza pia kuitumia kulipia bithaa na huduma pale inapokubalika.
 
-Ethereum imeundwa ili ikuwe, iweze kuwa programdi, usalama na kugatuliwa. Ni blockchain ambayo nichaguo kwa waendelezaji na makampuni ya biyashara 
+Ethereum imeundwa ili ikuwe, iweze kuprogramiwa, usalama na kugatuliwa. Ni blockchain ambayo nichaguo kwa waendelezaji na makampuni ya biyashara 
 Kutengeneza teknologia zinazo tokana na msingi huu kubadili jinsi ambanyo viwanda vinafanya kazi na jinsi tunavyo endesha maisha ya kila siku
 
 Kiasilia inaunga mkono mikataba janja "smart contracts", chombo muhimu nyuma ya application zilizo gatuliwa. Application nyingi zilizo gatuliwa za uchumi (DeFi) na application nyingine zilizo gatuliwa (dApps), zinatumia mikataba janja "smart contracts " pamoja na teknologia ya blockchain 
