--- a/content/ethereum-ni-nini/post.mdx
+++ b/content/ethereum-ni-nini/post.mdx
@@ -64,7 +64,7 @@ Ili kuweze kuelewa hii mikataba janja ni vyema tukaangali jinsi mifumo ambayo in
 
 Application kama Gmail zinatuwezesha kutumia barua pepe au application kama Pay Pal inatuwezesha kutuma fedha.
 
-Hii ina manisha data zetu binafsi, tarifa za kiuchumi na mengineyo kwa kiasi kikubwa zime hifadhiwa kwenye computer za watu wengine kwenye mtandao wa internet kwenye server zinazo milikiwa na makampuni kama vile Google, Facebook au Pay Pal hata makala haya ya Devduara0 yame hifadhiwa kwenye server ambayo inathibitiwa na mtu wa tatu 
+Hii ina manisha data zetu binafsi, tarifa za kiuchumi na mengineyo kwa kiasi kikubwa zime hifadhiwa kwenye computer za watu wengine kwenye mtandao wa internet kwenye server zinazo milikiwa na makampuni kama vile Google, Facebook au Pay Pal hata makala haya ya Devhabari yame hifadhiwa kwenye server ambayo inathibitiwa na mtu wa tatu 
 
 Huu muundo unaweza kuwa tatizo kwa mujibu ya watetizi wa mfumo uliyo gatuliwa, ina manisha uthibiti mdogo wa moja kwa moja kwa watumiaji na huwacha wazi fursa ya kuthibitiwa, ambapo mtu watatu atakapo ingilia na kumzuia mtumiaji kufanya kitendo chochote kile, iwe niku nunua hisa au kutuma ujumbe kwenye mitandao ya kijamii au kuzuia kila kitu pamoja.
 
