--- a/content/ethereum-ni-nini/post.mdx
+++ b/content/ethereum-ni-nini/post.mdx
@@ -64,14 +64,14 @@ Ili kuweze kuelewa hii mikataba janja ni vyema tukaangali jinsi mifumo ambayo in
 
 Application kama Gmail zinatuwezesha kutumia barua pepe au application kama Pay Pal inatuwezesha kutuma fedha.
 
-Hii ina manisha data zetu binafsi, tarifa za kiuchumi na mengineyo kwa kiasi kikubwa zime hifadhiwa kwenye computer za watu wengine kwenye mtandao wa internet kwenye server zinazo milikiwa na makampuni kama vile Google, Facebook au Pay Pal hata makala haya ya Devhabari yame hifadhiwa kwenye server ambayo inathibitiwa na mtu wa tatu 
+Hii ina manisha data zetu binafsi, tarifa za kiuchumi na mengineyo kwa kiasi kikubwa zime hifadhiwa kwenye computer za watu wengine kwenye mtandao wa internet kwenye server zinazo milikiwa na makampuni kama vile Google, Facebook au Pay Pal hata makala haya ya Devhabari yame hifadhiwa kwenye server ambayo inadhibitiwa na mtu wa tatu 
 
-Huu muundo unaweza kuwa tatizo kwa mujibu ya watetizi wa mfumo uliyo gatuliwa, ina manisha uthibiti mdogo wa moja kwa moja kwa watumiaji na huwacha wazi fursa ya kuthibitiwa, ambapo mtu watatu atakapo ingilia na kumzuia mtumiaji kufanya kitendo chochote kile, iwe niku nunua hisa au kutuma ujumbe kwenye mitandao ya kijamii au kuzuia kila kitu pamoja.
+Huu muundo unaweza kuwa tatizo kwa mujibu ya watetizi wa mfumo uliyo gatuliwa, ina manisha udhibiti mdogo wa moja kwa moja kwa watumiaji na huwacha wazi fursa ya kudhibitiwa, ambapo mtu watatu atakapo ingilia na kumzuia mtumiaji kufanya kitendo chochote kile, iwe niku nunua hisa au kutuma ujumbe kwenye mitandao ya kijamii au kuzuia kila kitu pamoja.
 
 
 Wazo la Ethereum nikubadili jinsi application's kwenye mtandao wa internet zinavyo fanya kazi leo hii. Kwa kuwazawadia watumiaji umiliki mkubwa kwa kumbadilisha **mtu wa tatu** na **maktaba janja** ambazo zitakua zina jiendeshea kanuni zake yenyewe moja kwa moja 
 
->>Wengi wakiwemo wa wekezaji kwenye mtandao wa internet wana amini mtandao wa internet mara zote ulikuwa na maana ya kugatuliwa .
+>>Wengi wakiwemo wa wekezaji kwenye mtandao wa internet wana amini mtandao wa internet mara zote ulikuwa na maana ya kugatuliwa.
 
 >>Kwenye Ethereum, server ambazo ziko chini ya mamlaka flani zina badilishwa na maelfu ya vinavyo itwa node ambazo zinaendeshwa na watu waliyo jitolea ulimwenguni kote na hivyo kutengeneza computer ya ulimwengu 
 
@@ -83,9 +83,9 @@ Mwaka 1994 kwa mara ya kwanza Nick Szabo ndiye aliye anza kupendekeza mikataba j
 
 Mkataba janja ni application au programu ambayo inafanyakazi kwenye blockchain na imeundwa ili kufanya vitendo muhimu kutokana na makubaliano ya masharti moja kwa moja. Inafanyakazi kama makubaliano au mikataba yakawaida ambayo inatumika kununulia au kuuzia mali, gari, kubadilisha fedha na zaidi.., **lakini kidigitali**.
 
-Kwenye ulimwengu wa blockchain, **mikataba janja** ina andikwa kama `code` hizi `code` pamoja na vigezo, masharti na hali ya mkataba zina patikana hatharani kwenye leja zilizo gatuliwa naku sambanzwa zina rekodi shughuli au vitalu.
+Kwenye ulimwengu wa blockchain, **mikataba janja** ina andikwa kama `code` hizi `code` pamoja na vigezo, masharti na hali ya mkataba zina patikana hadharani kwenye leja zilizo gatuliwa naku sambanzwa zina rekodi shughuli au vitalu.
 
-Pale ilitakapo tokea **tukio** lililo `ainishwa` au `muda wake kumalizika` kwenye **mkataba janja** `itasababisha code na makubaliano yatatokea au sitishwa`. 
+Pale litakapo tokea **tukio** lililo `ainishwa` au `muda wake kumalizika` kwenye **mkataba janja** `itasababisha code na makubaliano yatatokea au sitishwa`. 
 
 >>Ethereum ndiyo blockchain ya kwanza kuwa muenyeji na kutekeleza mikataba janja ambayo ilifanyika kwenye Ethereum Virtual Machine (EVM)
 
@@ -133,7 +133,7 @@ Kuchakata nyaraka kwa mikono ni gharama na kuna uwezekano mkubwa sana wa kufanya
 
 Nyaraka zako zinawekwa kwenye lega ya pamoja nyenye usalama siyo kwenye kichumba kidogo cha mtu flani au kabati 
 
-Mikataba janja haihitaji kuendeshwa au kufuatiliwa na waamuzi, tafsiri yake nikwamba una uthibiti wote wa makubaliano. Blockchain pia inahakikisha data zilizo wasilishwa na pande zote ziko sahihi 
+Mikataba janja haihitaji kuendeshwa au kufuatiliwa na waamuzi, tafsiri yake nikwamba una udhibiti wote wa makubaliano. Blockchain pia inahakikisha data zilizo wasilishwa na pande zote ziko sahihi 
 
 **Matokeo ya uhakika** 
 
@@ -160,7 +160,7 @@ Teknologia inavyo zidi kuwa mwaka hadi mwaka matumizi mbali mbali ya mikataba ja
 
 Mikataba ya kidigitali na NFT zinakwenda sambamba kwa vile zinaingiliana vizuri sana kiyasi kwamba kila NFT leo lazima itekeleze mikataba janja kwenye mfumo wake wa ikolojia ikiwemo kwenye gaming, maonyesho ya sanaa, ukusanyaji nk 
 
-NFT zinaendelezwa kwenye kila aina ya bithaa. Mfn kwa mashabiki wa michezo wanaweza kununua token za michezo ambazo zina fahamika kama token za mashabiki kutoka kwa wana michezo wao wanao wapenda, ambazo zinaweza kutumika kama kadi za biyashara. Baathi ya hizi NFT ni picha zina funana na kadi ya biyashara, na zingine ni video za kumbu kumbu za matukio ya kihistoria ya mwana michezo.
+NFT zinaendelezwa kwenye kila aina ya bidhaa. Mfn kwa mashabiki wa michezo wanaweza kununua token za michezo ambazo zina fahamika kama token za mashabiki kutoka kwa wana michezo wao wanao wapenda, ambazo zinaweza kutumika kama kadi za biyashara. Baadhi ya hizi NFT ni picha zina funana na kadi ya biyashara, na zingine ni video za kumbu kumbu za matukio ya kihistoria ya mwana michezo.
 
 Kuna njia mbili kuu ambazo mikataba janja inatumia kujumlisha NFT na kinyume chake
 
@@ -182,7 +182,7 @@ Ushirikiano kati ya NFT na maktaba janja imesabashi miradi yenye mafanikio kama 
 Moja ya sehemu zakusimumua kwenye matumizi ya mikataba janja ni kwenye tasnia ya sheria kwa kutoa uwezo mkubwa wa kua mbadala wa wanasheria au muamuzi yoyote yule watatu ambaye anapatanisha mashirikiano ya kibiyashara
 Mikataba janja inaweza kumanisha maendelo katika uwanda huu, kwa kushusha gharama za shughuli 
 
-Baathi ya majimbo nchini Marekani yameanza kuruhusu utumiaji wa mikataba janja na teknologia ya blockchain mfn California wanaruhusu leseni za ndoa zitolowe kwa kutumia teknologia ya blockchain na Arizona wame ruhusu mikataba ya kisheria inayotekelezeka itengenezwe kwa kutumia mikataba janja 
+Baadhi ya majimbo nchini Marekani yameanza kuruhusu utumiaji wa mikataba janja na teknologia ya blockchain mfn California wanaruhusu leseni za ndoa zitolowe kwa kutumia teknologia ya blockchain na Arizona wame ruhusu mikataba ya kisheria inayotekelezeka itengenezwe kwa kutumia mikataba janja 
 
 **Mali isiyo hamishika**
 .
@@ -190,9 +190,9 @@ Kama ilivyo kwenye uwanda wa sheria, mikataba janja ina nafasi muhimu ya kucheza
 
 **Mitandao ya kijamii**
 
-Moja kati ya changamoto kubwa kabisi kwenye mitandao ya kijamii ni swala la faragha. Majukwa mengi yapo chini ya usimamizi wa mamlaka flani hii ina acha uthibiti wa taarifa zako zote chini ya mamlaka flani. Uwepo wa mitandao yaki jamii kamavile Steemit unaonyesha kuna nafasi kwenye mikataba janja kwenye upande huu.
+Moja kati ya changamoto kubwa kabisi kwenye mitandao ya kijamii ni swala la faragha. Majukwa mengi yapo chini ya usimamizi wa mamlaka flani hii ina acha udhibiti wa taarifa zako zote chini ya mamlaka flani. Uwepo wa mitandao yaki jamii kamavile Steemit unaonyesha kuna nafasi kwenye mikataba janja kwenye upande huu.
 
-Steemit ni mtandao wa kijamii unao tumia teknologia ya blockchain ambayo ina ruhusu watumiaji kujipatia fedha kwa kupiga kura na kutengeneza yaliyomo "content" nyenye viwango vya juu inatumia fedha zinazo julikana kama `Steem` ambazo unaweza kuzinunua au kuziuza kwenye masoko ya kubadilishia fedha za kidigitali.
+Steemit ni mtandao wa kijamii unao tumia teknologia ya blockchain ambayo ina ruhusu watumiaji kujipatia fedha kwa kupiga kura na kutengeneza maudhui "content" nyenye viwango vya juu inatumia fedha zinazo julikana kama `Steem` ambazo unaweza kuzinunua au kuziuza kwenye masoko ya kubadilishia fedha za kidigitali.
 
 Njia kuu mbili ambazo Steemit inatumia mikataba janja 
 
@@ -200,12 +200,12 @@ Njia kuu mbili ambazo Steemit inatumia mikataba janja
 
 **Steem Dollars**: hiki kifaa nikama deni una pewa ahadi ya kupewa steem zenye thamani ya kiasi cha dola moja mda flani huko mbele 
 
-Pamoja vipengele vyote hivi vinafanya kazi kutengeneza mfumo wa ikolojia ambao una shawishi yaliyomo yenye viwango vya juu 
+Pamoja vipengele vyote hivi vinafanya kazi kutengeneza mfumo wa ikolojia ambao una shawishi maudhui yenye viwango vya juu 
 
 **Wavuti "browse"**
 Kama ambavyo imekuwa kwenye mitandao ya kijamii, mikataba janja kwenye wavuti inatoa uzoefu wa hali ya juu kabisa inapokuja kwenye swala lakuwaunga mkono watengenezaji tunao wakubali
 
-**Wavuti** kama vile `brave` tayari imesha fanya hivi kwa kutengeneza wavuti "browse" ambayo ina kuja nje ya boksi ikiwa tayari imejengwa na wallet ndani kwa ndani ambayo watu wanaweza kuitumia kutoa bakshishi kwa watengenezaji wa yaliyomo wanao wakubali. Brave ili jengwa ili kuwapa nguvu zaidi watengenezaji kuliko makampuni ya matangazo ambayo hua yana chukuwa kiasi fulani cha fedha.
+**Wavuti** kama vile `brave` tayari imesha fanya hivi kwa kutengeneza wavuti "browser" ambayo ina kuja nje ya boksi ikiwa tayari imejengwa na wallet ndani kwa ndani ambayo watu wanaweza kuitumia kutoa bakshishi kwa watengenezaji wa maudhui wanao wakubali. Brave ili jengwa ili kuwapa nguvu zaidi watengenezaji kuliko makampuni ya matangazo ambayo hua yana chukuwa kiasi fulani cha fedha.
 
 Kwenye hii wavuti kuna mikataba janja miwili iliyo tumika:-
 
