--- a/content/bitcoin/post.mdx
+++ b/content/bitcoin/post.mdx
@@ -18,7 +18,7 @@ popular: false
 
 
 
-Kama kichwa cha habari kinavyo jielezea makala haya lengo laka ni kutambulisha kwako juu ya tekinologia ya **fetha za kidigitali** ijulikanayo kama **Bitcoin** tukiangaliya history yake najinsi ilivyo badili ulimwengu wa uchumi na wala siyo kushawishi au kufundisha juu ya uwekezaji kwenye tekinologia hii.
+Kama kichwa cha habari kinavyo jielezea makala haya lengo lake ni kutambulisha kwako juu ya tekinologia ya **fedha za kidigitali** ijulikanayo kama **Bitcoin** tukiangaliya history yake najinsi ilivyo badili ulimwengu wa uchumi na wala siyo kushawishi au kufundisha juu ya uwekezaji kwenye tekinologia hii.
 
 Mambo ambayo tuta ya nzungumzia 
 
@@ -68,7 +68,7 @@ Fedha hizi za kidigital zina umarufu mkubwa hasa kwa sababu shughuli zake hupewa
 Ambayo ni mbinu ya kulinda mawasiliano.
 
 Na hakuna chombo chochote kile ambacho kina mamlaka juu yake, mtandao wake ume **gatuliwa**. 
-Kuna maelifu ya fedha za kidigital lakini kwa uchache kabisa baathi ambazo ni maarufu zaidi ni 
+Kuna maelifu ya fedha za kidigital lakini kwa uchache kabisa baadhi ambazo ni maarufu zaidi ni 
 **Bitcoin**, **Ethereum**, **Litecoin** pamoja na **Ripple**.
 
 ## Bitcoin ni nini?<a name="p2"></a>
